--- a/src/noticies/24-25/2024-09-27-stickers.md
+++ b/src/noticies/24-25/2024-09-27-stickers.md
@@ -1,8 +1,8 @@
 ---
-layout: layout/default.njk
+layout: layouts/default.njk
 tags: post
 curs: 24-25
-titol: Stickers!
+title: Stickers!
 date: 2024-09-27
 versio: 1
 ---
