--- a/src/noticies/24-25/2024-10-18-lectures.md
+++ b/src/noticies/24-25/2024-10-18-lectures.md
@@ -3,7 +3,7 @@ layout: layouts/default.njk
 tags: 
     - post
     - lectura
-titol: Dues lectures i trau la llengua
+title: Dues lectures i trau la llengua
 date: 2024-10-18
 curs: 24-25
 versio: 1
