--- a/src/noticies/24-25/2024-11-07-families.md
+++ b/src/noticies/24-25/2024-11-07-families.md
@@ -2,7 +2,7 @@
 layout: layouts/default.njk
 tags: 
     - post
-titol: Famílies pel Valencià i la DANA
+title: Famílies pel Valencià i la DANA
 date: 2024-11-07
 curs: 24-25
 versio: 1
