--- a/src/noticies/24-25/2024-11-26-trinquet.md
+++ b/src/noticies/24-25/2024-11-26-trinquet.md
@@ -1,7 +1,7 @@
 ---
 layout: layouts/default.njk
 tags: post
-titol: Trinquet els dimarts
+title: Trinquet els dimarts
 date: 2024-11-26
 curs: 24-25
 versio: 1
