--- a/src/noticies/24-25/2024-11-29-marca-si.md
+++ b/src/noticies/24-25/2024-11-29-marca-si.md
@@ -8,7 +8,7 @@ tags:
     - MarcaSíAlValencià 
     - FamíliespelValencià 
     - SíAlValencià
-titol: Marca sí al Valencià
+title: Marca sí al Valencià
 date: 2024-11-29
 curs: 24-25
 versio: 1
