--- a/src/noticies/24-25/2024-10-31-dana.md
+++ b/src/noticies/24-25/2024-10-31-dana.md
@@ -2,7 +2,7 @@
 layout: layouts/default.njk
 tags: 
     - post
-titol: Ajuda per la DANA
+title: Ajuda per la DANA
 date: 2024-10-31
 curs: 24-25
 versio: 1
