Afegint notícies del curs anterior

--- a/src/noticies/23-24/2024-06-21-fi-curs.md
+++ b/src/noticies/23-24/2024-06-21-fi-curs.md
@@ -17,17 +17,17 @@ Per acomiadar-nos, vos passem un article molt refrescant, i la seva llista de re
 
 I ens acomiadem amb paraules d’en Son Goku, de Bola de Drac Z:
 
-```
-"Soc un petit home de bé
-No vull problemes amb ningú
-Amics, cridem ben alt
-Som els millors!
-Camineu junts, no tingueu por de res
-Por de res 
-Ens protegeixen les estrelles
-Estic protegit per les estrelles
-Adeu, amics!!"
-```
+
+>"Soc un petit home de bé  
+>No vull problemes amb ningú  
+>Amics, cridem ben alt  
+>Som els millors!  
+>Camineu junts, no tingueu por de res  
+>Por de res   
+>Ens protegeixen les estrelles  
+>Estic protegit per les estrelles  
+>Adeu, amics!!"  
+
 
 🌊🎸🌞♥️✨💥
 
