metadata e imatge de formulari

--- a/src/noticies/25-26/2025-09-11-apuntat.md
+++ b/src/noticies/25-26/2025-09-11-apuntat.md
@@ -3,8 +3,10 @@ layout: layouts/default.njk
 tags: post
 curs: 25-26
 title: Apunta't a l'AFA
+description: Instruccions per apuntar-se a la associació de famíliies
 date: 2025-09-11
 versio: 1
+image: /assets/imgs/2025-09-11-formulari.png
 ---
 
 Benvolgudes famílies del CEIP Santa Teresa,
