--- a/src/noticies/25-26/2025-09-05-hola.md
+++ b/src/noticies/25-26/2025-09-05-hola.md
@@ -3,8 +3,10 @@ layout: layouts/default.njk
 tags: post
 curs: 25-26
 title: Hola, curs 2025-2026!
+description: Benvinguts a un nou curs.
 date: 2025-09-08
 versio: 1
+image: /assets/imgs/2025-09-08-hola.jpg
 ---
 
 Bon dia a totes i tots!
