--- a/src/noticies/25-26/2025-09-11-apuntat.md
+++ b/src/noticies/25-26/2025-09-11-apuntat.md
@@ -20,3 +20,20 @@ Una volta emplenat, cal fer la transferència de 32 € al número de compte `ES
 Per últim, al formulari us demanem una **adreça electrònica** per a enviar el certificat de família sòcia, el qual us servirà per a gaudir de totes les activitats que organitza l'AFA.
 
 [👉 FORMULARI D'INSCRIPCIÓ 👈](https://docs.google.com/forms/d/e/1FAIpQLSctHKCwl1TnhnxUEpUJzTNflhL7oOKM8W-CP-wB4t6bmoiO3Q/viewform)
+
+
+### Què fa l’afa per tu?
+
+* Estem presents al Consell Escolar i participem amb l’escola de les decisions que afecten els nostres fills i filles. 🏫
+* Col·laborem i treballem per la millora del servei de menjador.
+* Gestionem les activitats extraescolars. 🎨♟️🛼🎶
+* Gestionem els serveis de matinera i vespertina. ⏰
+* Gestionem el campament d’estiu. ⛺🌞
+* Organitzem les festes de Nadal, fi de curs i la xaranga de Carnestoltes. 🎄🎉🥁
+* Fem d’enllaç entre les famílies i l’escola per al pagament de les activitats. 🫱🏻🏦🫲🏻
+* Subvencionem, en cas de necessitat, una part de les activitats escolars. 💰
+* Col·laborem econòmicament amb necessitats puntuals de l’escola. 🤝
+* Participem i col·laborem amb les activitats de les Trobades.👥🎈
+* Defensem i promovem l’ús del valencià. 🗣️📚
+* Organitzem la impartició de cursos i xarrades amb l’objectiu de millorar la convivència, des d’un punt de vista feminista i igualitari. 💜
+* Treballem per a millorar el pati de l’escola i aconseguir un espai més verd. 🌳🌿
