--- a/src/noticies/25-26/2025-09-11-apuntat.md
+++ b/src/noticies/25-26/2025-09-11-apuntat.md
@@ -22,7 +22,7 @@ Per últim, al formulari us demanem una **adreça electrònica** per a enviar el
 [👉 FORMULARI D'INSCRIPCIÓ 👈](https://docs.google.com/forms/d/e/1FAIpQLSctHKCwl1TnhnxUEpUJzTNflhL7oOKM8W-CP-wB4t6bmoiO3Q/viewform)
 
 
-### Què fa l’afa per tu?
+### Què fa l’AFA per tu?
 
 * Estem presents al Consell Escolar i participem amb l’escola de les decisions que afecten els nostres fills i filles. 🏫
 * Col·laborem i treballem per la millora del servei de menjador.
