Notícia soble les extraescolars

--- a/src/noticies/24-25/2024-09-27-stickers.md
+++ b/src/noticies/24-25/2024-09-27-stickers.md
@@ -5,6 +5,7 @@ curs: 24-25
 title: Stickers!
 date: 2024-09-27
 versio: 1
+image: /assets/imgs/2024-09-27-mel-de-romer.jpg
 ---
 ![](/assets/imgs/2024-09-27-mel-de-romer.jpg)
 
